data/examples/semantic_error/in.cpp
void main()
{
  float x = 3.4;
  int z = x % 2;
}